--- a/Seodery/src/main/webapp/resources/css/login/default.css
+++ b/Seodery/src/main/webapp/resources/css/login/default.css
@@ -4,6 +4,10 @@ html {
 	line-height: 1.2;
 	word-wrap: break-word;
 }
+#logo {
+	display: flex;
+    justify-content: center;
+}
 body {
 	background: #eee;
 	-webkit-font-smoothing: antialiased;
@@ -41,7 +45,7 @@ table {
 }
 img {
 	max-width: 100%;
-	height: auto;
+	height: 163px;
 	border: 0;
 }
 a {
