--- a/Seodery/src/main/webapp/resources/css/login/login.css
+++ b/Seodery/src/main/webapp/resources/css/login/login.css
@@ -21,11 +21,11 @@
       header { /*헤더 %로 단위변경*/
            width: 100%;
            height: 155px;
-           /* background-image :url("../images/logo.png"); */
+          /*  background-image :url("resources/images/login/logo.png");  */
            background-size: 320px 164px;
            background-repeat : no-repeat;
            background-position : center;
-          /*  border-bottom: 2px solid black; */
+          /*  border-bottom: 2px solid black;  */
    }
 .logo {
 	width: 100%;
@@ -90,7 +90,7 @@
    color: black;
    text-decoration: none;
    width: 25%; 
-    font-size: 1.4rem;
+   font-size: 1.4rem;
 }
 /* 네비바 세로선 */
 .navi > li.sub{
