--- a/Seodery/src/main/webapp/resources/css/login/member.css
+++ b/Seodery/src/main/webapp/resources/css/login/member.css
@@ -9,8 +9,8 @@
         table{
             margin-left:auto; 
             margin-right:auto;
-            border:3px solid white
-        }
+            border:1px solid black       
+             }
         
         td{
             border:1px solid gray
